# ApeXQuant

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  EXECUTION_APPROVAL_MODEL.md  EXECUTION_DRIFT_ANALYSIS.md  EXECUTION_GO_LIVE_CRITERIA.md  EXECUTION_PARITY_THRESHOLDS.md  EXECUTION_PARITY_VALIDATION.md  EXECUTION_SHADOW_HEALTH_MODEL.md  EXECUTION_SHADOW_MODE_IMPLEMENTATION.md  EXECUTION_SHADOW_MODE_INVARIANTS.md  EXECUTION_SHADOW_MODE_TESTS.md  FINAL_PRODUCTION_ACCEPTANCE_AUDIT.md  FINAL_PRODUCTION_VERIFICATION_REPORT.md  FOUNDATION_TODO.md  PHASE12_RUNBOOK.md  PORTFOLIO_HEALTH_IMPLEMENTATION.md  PORTFOLIO_HEALTH_INVARIANTS.md  PORTFOLIO_HEALTH_TESTS.md  PORTFOLIO_QUALITY_IMPLEMENTATION.md  PORTFOLIO_QUALITY_INVARIANTS.md  PORTFOLIO_QUALITY_TESTS.md  PRODUCTION_OPERATIONS_GUIDE.md  QUANTITATIVE_IMPLEMENTATION_AUDIT.md  RISK_BENCHMARK_REPORT.md  RISK_DETERMINISM_REPORT.md  RISK_GO_LIVE_CERTIFICATION.md  RISK_MONTE_CARLO_REPORT.md  RISK_PARITY_REPORT.md  RISK_STRESS_REPORT.md  WAVE4_CONTINUOUS_SHADOW_CERTIFICATION.md  WAVE5_REAL_BROKER_CERTIFICATION.md  allow_all.py  allow_tests.py  clippy.json  clippy2.json  clippy_errors.txt  deploy.sh  (+17 more)
services/ai-engine-rs/: Cargo.toml
services/analytics-engine-rs/: Cargo.toml
services/backtester-rs/: Cargo.toml
services/core-runtime-rs/: Cargo.toml  FINAL_30_DAY_CERTIFICATION_REPORT.md
services/event-bus-rs/: Cargo.toml
services/execution-engine-rs/: BINANCE_ADAPTER_IMPLEMENTATION.md  BROKER_FAILOVER_IMPLEMENTATION.md  BROKER_HEALTH_MODEL.md  CONNECTION_STATE_MACHINE.md  Cargo.toml  EVENT_SOURCING_IMPLEMENTATION.md  EXECUTION_BENCHMARK_ENGINE.md  EXECUTION_BROKER_IMPLEMENTATION.md  EXECUTION_BROKER_INVARIANTS.md  EXECUTION_BROKER_TESTS.md  EXECUTION_CERTIFICATION_CRITERIA.md  EXECUTION_CONSISTENCY_ENGINE.md  EXECUTION_COST_MODEL.md  EXECUTION_DRIFT_ANALYSIS.md  EXECUTION_ENGINE_PROGRESS.md  EXECUTION_ENGINE_TEST_PLAN.md  EXECUTION_ENGINE_V1.md  EXECUTION_EVENT_SOURCING.md  EXECUTION_GO_LIVE_APPROVAL.md  EXECUTION_GO_LIVE_CERTIFICATION.md  EXECUTION_GO_LIVE_CRITERIA.md  EXECUTION_HEALTH_MODEL.md  EXECUTION_INVARIANTS.md  EXECUTION_PARITY_REPORT.md  EXECUTION_PARITY_VALIDATION.md  EXECUTION_POLICIES.md  EXECUTION_PROGRESS.md  EXECUTION_REBUILDER.md  EXECUTION_REPLAY_VALIDATION.md  EXECUTION_REPOSITORY_ARCHITECTURE.md  EXECUTION_SCORE_MODEL.md  EXECUTION_SEQUENCE_RULES.md  EXECUTION_SHADOW_IMPLEMENTATION.md  EXECUTION_SHADOW_INVARIANTS.md  EXECUTION_SHADOW_TESTS.md  EXECUTION_SNAPSHOT_STRATEGY.md  EXECUTION_STORAGE_IMPLEMENTATION.md  EXECUTION_STORAGE_INVARIANTS.md  EXECUTION_STORAGE_TESTS.md  EXECUTION_STRESS_VALIDATION.md  (+24 more)
services/learning-engine-rs/: Cargo.toml
services/market-data-engine-rs/: AGGREGATION_ENGINE.md  ANOMALY_ENGINE.md  BINANCE_FEED_ADAPTER.md  BINANCE_STREAM_ENGINE.md  CANDLE_AGGREGATOR.md  CANDLE_DOMAIN.md  CONNECTION_STATE_MACHINE.md  CONNECTIVITY_INVARIANTS.md  CONNECTIVITY_TESTS.md  Cargo.toml  DATA_QUALITY_ENGINE.md  DEPTH_ENGINE.md  EFFICIENCY_ENGINE.md  EVENT_DISPATCHER.md  EVENT_DISTRIBUTION_IMPLEMENTATION.md  EVENT_SOURCING.md  EXECUTION_INTEGRATION_IMPLEMENTATION.md  FAILOVER_ENGINE.md  FEATURE_STORE_IMPLEMENTATION.md  FEED_HEALTH_MODEL.md  FEED_QUALITY_MODEL.md  FEED_REGISTRY.md  FEED_ROUTER.md  GAP_DETECTION_ENGINE.md  IMBALANCE_ENGINE.md  INTELLIGENCE_INVARIANTS.md  INTELLIGENCE_TESTS.md  LATENCY_ENGINE.md  LIQUIDITY_ENGINE.md  MARKET_CONFIDENCE_ENGINE.md  MARKET_CONNECTIVITY_IMPLEMENTATION.md  MARKET_DATA_ENGINE_V1.md  MARKET_DATA_GO_LIVE_CERTIFICATION.md  MARKET_DATA_INVARIANTS.md  MARKET_DATA_PHASE2_WALKTHROUGH.md  MARKET_DATA_PHASE3_WALKTHROUGH.md  MARKET_DATA_PHASE5_WALKTHROUGH.md  MARKET_DATA_TESTS.md  MARKET_INTELLIGENCE_IMPLEMENTATION.md  MARKET_QUALITY_ENGINE.md  (+31 more)
services/orchestrator-rs/: Cargo.toml
services/performance-engine-rs/: CONTEXT_ANALYSIS_INVARIANTS.md  CONTEXT_ANALYSIS_TESTS.md  Cargo.toml  DEGRADATION_IMPLEMENTATION.md  EDGE_IMPLEMENTATION.md  EXPECTANCY_IMPLEMENTATION.md  PERFORMANCE_CERTIFICATION_CRITERIA.md  PERFORMANCE_ENGINE_PROGRESS.md  PERFORMANCE_ENGINE_TEST_PLAN.md  PERFORMANCE_ENGINE_V1.md  PERFORMANCE_FOUNDATION_INVARIANTS.md  PERFORMANCE_FOUNDATION_TESTS.md  PERFORMANCE_GO_LIVE_CERTIFICATION.md  PERFORMANCE_GO_LIVE_CRITERIA.md  PERFORMANCE_PARITY_REPORT.md  PERFORMANCE_SHADOW_MODE_IMPLEMENTATION.md  PERFORMANCE_VALIDATION_IMPLEMENTATION.md  PERFORMANCE_VALIDATION_INVARIANTS.md  PERFORMANCE_VALIDATION_TESTS.md  REGIME_ANALYSIS_IMPLEMENTATION.md  SESSION_ANALYSIS_IMPLEMENTATION.md  STABILITY_IMPLEMENTATION.md  SYMBOL_ANALYSIS_IMPLEMENTATION.md  TIMEFRAME_ANALYSIS_IMPLEMENTATION.md
services/portfolio-engine-rs/: CAPITAL_ALLOCATION_IMPLEMENTATION.md  CAPITAL_ALLOCATION_INVARIANTS.md  CAPITAL_ALLOCATION_TESTS.md  Cargo.toml  EXPOSURE_ENGINE_IMPLEMENTATION.md  EXPOSURE_ENGINE_INVARIANTS.md  EXPOSURE_ENGINE_TESTS.md  HEAT_ENGINE_IMPLEMENTATION.md  HEAT_ENGINE_INVARIANTS.md  HEAT_ENGINE_TESTS.md  PORTFOLIO_ANALYTICS_IMPLEMENTATION.md  PORTFOLIO_ANALYTICS_INVARIANTS.md  PORTFOLIO_ANALYTICS_TESTS.md  PORTFOLIO_CERTIFICATION_CRITERIA.md  PORTFOLIO_ENGINE_PROGRESS.md  PORTFOLIO_ENGINE_TEST_PLAN.md  PORTFOLIO_ENGINE_V1.md  PORTFOLIO_GO_LIVE_CERTIFICATION.md  PORTFOLIO_GO_LIVE_CRITERIA.md  PORTFOLIO_PARITY_REPORT.md  PORTFOLIO_SHADOW_MODE_IMPLEMENTATION.md  PORTFOLIO_SHADOW_MODE_INVARIANTS.md  PORTFOLIO_SHADOW_MODE_TESTS.md  PORTFOLIO_STATE_IMPLEMENTATION.md  PORTFOLIO_STATE_INVARIANTS.md  PORTFOLIO_STATE_TESTS.md  PORTFOLIO_STORAGE_IMPLEMENTATION.md  PORTFOLIO_STORAGE_INVARIANTS.md  PORTFOLIO_STORAGE_TESTS.md  PORTFOLIO_VALIDATION_IMPLEMENTATION.md  PORTFOLIO_VALIDATION_INVARIANTS.md  PORTFOLIO_VALIDATION_TESTS.md  RECOMMENDATION_ENGINE_IMPLEMENTATION.md  RECOMMENDATION_ENGINE_INVARIANTS.md  RECOMMENDATION_ENGINE_TESTS.md
services/position-engine-rs/: Cargo.toml  POSITION_ENGINE_PROGRESS.md  POSITION_ENGINE_TEST_PLAN.md  POSITION_ENGINE_V1.md  POSITION_GO_LIVE_CERTIFICATION.md  POSITION_PARITY_REPORT.md
services/risk-engine-rs/: CIRCUIT_BREAKER_IMPLEMENTATION.md  CIRCUIT_BREAKER_INVARIANTS.md  CIRCUIT_BREAKER_TESTS.md  CORRELATION_RISK_IMPLEMENTATION.md  (+42 more)
(+1637 files in other folders)
