[workspace]
name = "apex-v3"
version = "3.0.0"
edition = "2021"
resolver = "2"

members = [
    "services/event-bus-rs",
    "services/signal-engine-rs",
    "services/risk-engine-rs",
    "services/execution-engine-rs",
    "services/portfolio-engine-rs",
    "services/position-engine-rs",
    "services/learning-engine-rs",
    "services/analytics-engine-rs",
    "services/backtester-rs",
    "services/performance-engine-rs", "services/strategy-engine-rs", "services/market-data-engine-rs",
]

[workspace.package]
version = "3.0.0"
edition = "2021"
authors = ["APEX Team <team@apex.trading>"]
license = "UNLICENSED"
repository = "https://github.com/apex-trading/apex-v3"
rust-version = "1.78"

[workspace.dependencies]
# Core runtime
tokio = { version = "1.38", features = ["full", "tracing"] }
tokio-util = { version = "0.7", features = ["codec", "time", "rt"] }
pin-project = "1.1"

# Async runtime
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1"
streamwork = "0.1"

# gRPC / Protocol Buffers
tonic = { version = "0.11", features = ["transport", "tls", "gzip"] }
tonic-build = "0.11"
tonic-health = "0.11"
tonic-reflection = "0.11"
prost = "0.12"
prost-types = "0.12"
prost-build = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order", "float_roundtrip"] }
serde_bytes = "0.11"
bincode = "1.3"

# Redis
redis = { version = "0.25", features = ["tokio-comp", "streams", "connection-manager"] }

# Kafka / Event Streaming
# rdkafka = { version = "0.36", features = ["tokio", "ssl"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "time", "json", "migrate", "rust_decimal"] }
sea-orm = { version = "1.0", features = ["sqlx-postgres", "runtime-tokio-native-tls", "mock", "with-json", "with-uuid", "with-time"] }
sea-orm-migration = "1.0"
deadpool = "0.12"
deadpool-postgres = "0.14"

# HTTP
axum = { version = "0.7", features = ["tokio", "http2", "ws"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-br", "compression-gzip", "request-id"] }
hyper = { version = "1.3", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "gzip", "brotli"] }

# WebSocket
tokio-tungstenite = "0.23"

# Observability
tracing = { version = "0.1", features = ["attributes", "valuable"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "parking_lot", "registry"] }
tracing-opentelemetry = "0.24"
tracing-log = "0.2"
valuable = { version = "0.1", features = ["derive"] }
opentelemetry = { version = "0.23", features = ["trace", "metrics", "metricsgen"] }
opentelemetry_sdk = { version = "0.23", features = ["rt-tokio", "metrics"] }
opentelemetry-otlp = { version = "0.16", features = ["tonic", "metrics", "trace"] }
prometheus = { version = "0.13", features = ["process"] }
metrics = "0.23"
metrics-exporter-prometheus = "0.14"

# Configuration
config = { version = "0.14", features = ["toml", "json", "yaml"] }
clap = { version = "4.5", features = ["derive", "env", "cargo"] }
dotenvy = "0.15"

# Time
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros", "local-offset"] }
chrono = { version = "0.4", features = ["serde", "clock", "std", "now"] }

# UUID
uuid = { version = "1.8", features = ["v4", "v7", "serde"] }

# Error Handling
anyhow = { version = "1.0", features = ["backtrace"] }
thiserror = "1.0"

# Validation
validator = { version = "0.18", features = ["derive", "regex"] }

# Math / Financial
rust_decimal = { version = "1.35", features = ["serde", "maths", "db-postgres"] }
statrs = "0.17"
nalgebra = "0.33"

# Testing
tokio-test = "0.4"
mockall = "0.12"
test-log = { version = "0.2", features = ["trace", "color"] }
criterion = { version = "0.5", features = ["async_tokio"] }
proptest = "1.4"
fake = { version = "2.9", features = ["derive"] }
testcontainers = "0.21"
testcontainers-modules = { version = "0.8", features = ["postgres", "redis"] }
wiremock = "0.6"

# Utilities
itertools = "0.13"
rayon = "1.10"
dashmap = "6.0"
parking_lot = "0.12"
crossbeam = "0.8"
arc-swap = "1.7"
once_cell = "1.19"

# Regex
regex = "1.10"
lazy_static = "1.5"

# Cryptography (for signatures)
ring = "0.17"
ed25519-dalek = { version = "2.1", features = ["serde"] }
x25519-dalek = "2.0"

# Compression
flate2 = "1.0"
brotli = "6.0"
zstd = "0.13"

# Schema validation
schemars = "0.8"

[workspace.profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[workspace.profile.dev]
opt-level = 0
debug = true
incremental = true

[workspace.profile.profiling]
inherits = "release"
debug = true
strip = false
