[package]
name = "backtester-rs"
version = "3.0.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "APEX V3 Backtester - Historical simulation and strategy validation"

[dependencies]
# Workspace dependencies
tokio.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
redis.workspace = true
tonic.workspace = true
tonic-health.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
time.workspace = true
rust_decimal.workspace = true
rayon.workspace = true
dashmap.workspace = true
metrics.workspace = true

# Local dependencies
apex-protos = { path = "../../shared/apex-protos" }

# Service-specific
polars = { version = "0.40", features = ["performant", "dtype-datetime", "parquet"] }
parquet = "52.0"
crossbeam-channel = "0.5"

[dev-dependencies]
tokio-test.workspace = true
mockall.workspace = true
fake.workspace = true

[[bin]]
name = "backtester"
path = "src/main.rs"

[lib]
name = "backtester"
path = "src/lib.rs"
