[package]
name = "core-runtime-rs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
rust_decimal = { workspace = true }
async-trait = { workspace = true }
time = { workspace = true }
config = { workspace = true }
ring = { workspace = true }
axum = { workspace = true, optional = true }
tonic = { workspace = true, optional = true }
prost = { workspace = true, optional = true }
rand = "0.8"

[features]
default = []
api-http = ["dep:axum"]
api-grpc = ["dep:tonic", "dep:prost"]
