[package]
name = "event-bus-rs"
version = "3.0.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "APEX V3 Event Bus - Immutable event streaming with Redis Streams"

[dependencies]
# Workspace dependencies
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
redis.workspace = true
tonic.workspace = true
tonic-health.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
time.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
metrics.workspace = true
hyper.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

# Local dependencies
apex-protos = { path = "../../shared/apex-protos" }

# Service-specific
deadpool = "0.12"
serde_bytes = "0.11"
stream-cancel = "0.8"
bincode = "1.3"

[dev-dependencies]
tokio-test.workspace = true
mockall.workspace = true
testcontainers.workspace = true
testcontainers-modules.workspace = true
fake.workspace = true

[[bin]]
name = "event-bus"
path = "src/main.rs"

[lib]
name = "event_bus"
path = "src/lib.rs"
