[package]
name = "event-bus-rs"
version = "3.0.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "APEX V3 Event Bus - Institutional deterministic event distribution layer"

[dependencies]
# Workspace dependencies
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx = { workspace = true, features = ["chrono"] }
tonic.workspace = true
tonic-health.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid = { workspace = true, features = ["v4"] }
chrono.workspace = true
rust_decimal.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
metrics.workspace = true
hyper.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
async-nats.workspace = true
redis.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
tracing-opentelemetry.workspace = true
metrics-exporter-prometheus.workspace = true
deadpool-redis = "0.14.0"
backoff = { version = "0.4.0", features = ["tokio"] }

# Local dependencies
apex-protos = { path = "../../shared/apex-protos" }
tokio-stream = "0.1.18"
prost.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tokio-test.workspace = true
mockall.workspace = true
proptest.workspace = true
rust_decimal_macros = "1.40.0"

[[bin]]
name = "event-bus"
path = "src/main.rs"

[lib]
name = "event_bus"
path = "src/lib.rs"
