[package]
name = "execution-engine-rs"
version = "3.0.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "APEX V3 Execution Engine - Order routing and MT5 bridge communication"

[dependencies]
tokio = { workspace = true, features = ["sync", "macros", "rt-multi-thread"] }
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
redis.workspace = true
tonic.workspace = true
tonic-health.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
time.workspace = true
rust_decimal.workspace = true
dashmap.workspace = true
metrics.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

# Local dependencies
apex-protos = { version = "3.0.0", path = "../../shared/apex-protos" }

# Service-specific
backoff = { version = "0.4", features = ["tokio"] }
bollard = "0.16"
sqlx = { workspace = true, features = ["postgres", "runtime-tokio-rustls", "macros", "chrono", "uuid"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
rust_decimal_macros = "1.40.0"
async-trait.workspace = true
ring.workspace = true
config.workspace = true
tokio-tungstenite.workspace = true
hex = "0.4.3"

[dev-dependencies]
tokio-test.workspace = true
mockall.workspace = true
wiremock.workspace = true
proptest.workspace = true
criterion = "0.5"
# testcontainers.workspace = true  # Disabled due to version conflict



[[bin]]
name = "execution-engine"
path = "src/main.rs"

[lib]
name = "execution_engine"
path = "src/lib.rs"
