[package]
name = "learning-engine-rs"
version = "3.0.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "APEX V3 Learning Engine - Reinforcement learning and strategy evolution"

[dependencies]
# Workspace dependencies
tokio.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tonic.workspace = true
tonic-health.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
time.workspace = true
rust_decimal.workspace = true
nalgebra.workspace = true
rayon.workspace = true
dashmap.workspace = true
metrics.workspace = true

# Local dependencies
apex-protos = { path = "../../shared/apex-protos" }

# Service-specific
rand = "0.8"
rand_distr = "0.4"
tracing-subscriber.workspace = true
metrics-exporter-prometheus.workspace = true

[dev-dependencies]
tokio-test.workspace = true
mockall.workspace = true

[[bin]]
name = "learning-engine"
path = "src/main.rs"

[lib]
name = "learning_engine"
path = "src/lib.rs"
