[package]
name = "orchestrator-rs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
core-runtime-rs = { path = "../core-runtime-rs", features = ["api-grpc", "api-http"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
config = { workspace = true }
time = { workspace = true }

[features]
default = []
