[package]
name = "performance-engine-rs"
version = "3.0.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "APEX V3 Performance Engine - Deterministic performance measurement and truth evaluation"

[dependencies]
# Workspace dependencies
tokio.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
redis.workspace = true
tonic.workspace = true
tonic-health.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
time.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
nalgebra.workspace = true
rayon.workspace = true
dashmap.workspace = true
metrics.workspace = true
axum = "0.6"
tower.workspace = true
tower-http.workspace = true
prost.workspace = true
tokio-stream = "0.1"
tonic-reflection.workspace = true
rust_decimal_macros = "1.35.0"
# Local dependencies
apex-protos = { path = "../../shared/apex-protos" }

[dev-dependencies]
tokio-test.workspace = true
mockall.workspace = true
proptest.workspace = true

criterion = "0.5" # For benchmarking

[[bin]]
name = "performance-engine"
path = "src/main.rs"

[lib]
name = "performance_engine"
path = "src/lib.rs"
