[package]
name = "position-engine-rs"
version = "3.0.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "APEX V3 Position Engine - Active trade management and position tracking"

[dependencies]
# Workspace dependencies
tokio.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
redis.workspace = true
tonic.workspace = true
tonic-health.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
time.workspace = true
rust_decimal.workspace = true
dashmap.workspace = true
metrics.workspace = true

# Local dependencies
apex-protos = { path = "../../shared/apex-protos" }

# Service-specific
ordered-float = "4.2"

[dev-dependencies]
tokio-test.workspace = true
mockall.workspace = true
fake.workspace = true

[[bin]]
name = "position-engine"
path = "src/main.rs"

[lib]
name = "position_engine"
path = "src/lib.rs"
