[package]
name = "risk-engine-rs"
version = "3.0.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "APEX V3 Risk Engine - Position sizing, drawdown, and exposure management"

[dependencies]
# Workspace dependencies
tokio.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
redis.workspace = true
tonic.workspace = true
tonic-health.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
time.workspace = true
rust_decimal.workspace = true
rust_decimal.maths = true
nalgebra.workspace = true
dashmap.workspace = true
metrics.workspace = true
axum.workspace = true
metrics-exporter-prometheus.workspace = true

# Local dependencies
apex-protos = { path = "../../shared/apex-protos" }

# Service-specific
once_cell = "1.19"
tracing-subscriber = { workspace = true, features = ["env-filter"] }
[dev-dependencies]
tokio-test.workspace = true
mockall.workspace = true
criterion.workspace = true
proptest.workspace = true

[[bin]]
name = "risk-engine"
path = "src/main.rs"

[lib]
name = "risk_engine"
path = "src/lib.rs"

[[bin]]
name = "validator"
path = "src/bin/validator.rs"
