[package]
name = "risk-engine-rs"
version = "3.0.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "APEX V3 Risk Engine - Position sizing, drawdown, and exposure management"

[dependencies]
tokio = { workspace = true, features = ["sync", "macros", "rt-multi-thread"] }
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
redis.workspace = true
tonic.workspace = true
tonic-health.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
time.workspace = true
rust_decimal.workspace = true
nalgebra.workspace = true
dashmap.workspace = true
metrics.workspace = true
axum = "0.6"
metrics-exporter-prometheus.workspace = true
chrono = { version = "0.4", features = ["serde"] }

# Local dependencies
apex-protos = { version = "3.0.0", path = "../../shared/apex-protos" }
tokio-stream = "0.1"
tower = { version = "0.4", features = ["util"] }


# Service-specific
once_cell = "1.19"
tracing-subscriber = { workspace = true, features = ["env-filter"] }
rust_decimal_macros = "1.40.0"
[dev-dependencies]
tokio-test.workspace = true
mockall.workspace = true
criterion.workspace = true
proptest.workspace = true

[[bin]]
name = "risk-engine"
path = "src/main.rs"

[lib]
name = "risk_engine"
path = "src/lib.rs"

[[bin]]
name = "validator"
path = "src/bin/validator.rs"

