[package]
name = "signal-engine-rs"
version = "3.0.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "APEX V3 Signal Engine - Deterministic institutional-grade signal generation"

[dependencies]
# Workspace dependencies
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
redis.workspace = true
tonic.workspace = true
tonic-health.workspace = true
tonic-reflection.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
time.workspace = true
rust_decimal = { workspace = true, features = ["serde-with-str"] }
statrs.workspace = true
rayon.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
metrics.workspace = true
hyper.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
config.workspace = true
prost.workspace = true
prost-types.workspace = true

# Local dependencies
apex-protos = { path = "../../shared/apex-protos" }

# Additional validation dependencies (Phase 10 Shadow Mode)
chrono.workspace = true
rusqlite = { version = "0.29", features = ["bundled", "chrono", "serde_json"] }
csv = "1.3"

# Service-specific
serde_bytes = "0.11"
tokio-stream = "0.1"
pin-project = "1.1"
num-traits = "0.2.19"
tracing-subscriber.workspace = true

[dev-dependencies]
tokio-test.workspace = true
mockall.workspace = true
criterion.workspace = true
proptest.workspace = true
fake.workspace = true
# testcontainers.workspace = true  # Disabled due to version conflict
# testcontainers-modules.workspace = true
test-log.workspace = true

[[bin]]
name = "signal-engine"
path = "src/main.rs"

[lib]
name = "signal_engine"
path = "src/lib.rs"

# Benchmarks defined in benches/ directory
# [[bench]]
# name = "signal_generation"
# harness = false
#
# [[bench]]
# name = "confluence_calculation"
# harness = false
